--- a/.env.example
+++ b/.env.example
@@ -9,15 +9,26 @@ BASE_RPC_URL=https://mainnet.base.org
 # ALCHEMY_BASE_RPC_URL=https://base-sepolia.g.alchemy.com/v2/<your_alchemy_key>
 ALCHEMY_BASE_RPC_URL=https://base-mainnet.g.alchemy.com/v2/<your_alchemy_key>
 
-# Alchemy API Key for WebSocket monitoring
+# Alchemy API Key (legacy, can be removed when using Moralis)
 ALCHEMY_API_KEY=<your_alchemy_key>
 PRIVATE_KEY=<your_private_key_without_0x_prefix>
+
+# Moralis Configuration
+MORALIS_API_KEY=<your_moralis_api_key>
+MORALIS_WEBHOOK_SECRET=<your_moralis_webhook_secret>
+MORALIS_STREAM_ID=<optional_existing_stream_id>
+
+# Server URL for webhooks (including protocol and port)
+# Required for Moralis webhook callbacks
+SERVER_URL=http://your-server-url.com
 
 # Contract Addresses
 # EON_CONTRACT_ADDRESS=0x66B5700036D7E397F721192fA06E17f9c0515F7f
 EON_CONTRACT_ADDRESS=0x49E0575D4aAc65C1FEE53FF1458B03dB14c3F82F
 # USDC_CONTRACT_ADDRESS=0x036CbD53842c5426634e7929541eC2318f3dCF7e
 USDC_CONTRACT_ADDRESS=0x833589fCD6eDb6E08f4c7C32D4f71b54bdA02913
+# WETH Contract on Base Mainnet
+WETH_CONTRACT_ADDRESS=0x4200000000000000000000000000000000000006
 
 # Server Config
 PORT=3000
