--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@moralisweb3/common-evm-utils": "^2.27.2",
     "alchemy-sdk": "^3.5.8",
     "axios": "^1.9.0",
     "cron": "^4.3.0",
@@ -20,6 +21,7 @@
     "ethers": "^6.14.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
+    "moralis": "^2.27.2",
     "web3": "^4.16.0"
   },
   "devDependencies": {
